--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "underscore": "~1.6.0",
     "angular-grid": "2.0.7",
     "momentjs": "~2.6.0",
-    "requirejs": "~2.1.14"
+    "requirejs": "~2.1.14",
+    "d3": "~3.4.10"
   }
 }
